--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Jørgen Maurstad Leiros
-logo: assets/headshot.png
+logo: /assets/headshot.png
 # description: text below image
 # show downloads: true
 theme: jekyll-theme-minimal
